[HUBZERO][#4342][PLG_PROJECTS_DATABASES] Fix for overlapping Next/back buttons in create database interface.

--- a/plugins/projects/databases/res/dataTables/jquery.dataTables.css
+++ b/plugins/projects/databases/res/dataTables/jquery.dataTables.css
@@ -9,6 +9,7 @@
 .paging_two_button .fg-button {
 	float: left;
 	cursor: pointer;
+	margin-right: 0;
 	* cursor: hand;
 }
 
